# PythonTP2

./: .gitignore  AjusteXGBoost.ipynb  Analisis Descriptivo.ipynb  ComparacionModelos.ipynb  NOTAS.md  ParticionDatos.ipynb  PrediccionesFinales.ipynb  README.md  RegresionLogistica.ipynb  pyproject.toml
notebooks/: 01-AnalisisDescriptivo.ipynb  02-ParticionDatos.ipynb  03-AjusteXGBoost.ipynb  04-RegresionLogistica.ipynb  06-PrediccionesFinales.ipynb
