[project]
name = "pythontp2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "plotnine>=0.15.7",
    "polars>=1.42.0",
    "pyarrow>=24.0.0",
    "pyprojroot>=0.3.0",
    "scikit-learn>=1.9.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
